--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 header {
-  background: url('../img/bg.png');
+  background: url`('../img/bg.png') ;
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -53,7 +53,7 @@ header {
 }
 
 .nav_menu {
-  color: #fff;
+  color:#fff;
   display: inline-block;
   margin-left: 94px;
 }
@@ -70,16 +70,16 @@ header {
 }
 
 .nav_menu a {
-  color: #edbfff;
+  color:#edbfff;
   text-decoration: none;
 }
 
 .nav_menu span {
-  color: #fff;
+  color:#fff;
 }
 
 .nav_menu_footer a {
-  color: #fff;
+  color:#fff;
   text-decoration: none;
 }
 
@@ -112,21 +112,21 @@ header {
 }
 
 .banner_text h2 {
-  color: #fefefe;
+  color:#fefefe;
   font-size: 3.6em;
   font-weight: normal;
   margin: 21px 0 0 0;
 }
 
 .banner_text h3 {
-  color: #edbfff;
+  color:#edbfff;
   font-size: 1.9em;
   font-weight: normal;
   margin: 0;
 }
 
 .banner_text p {
-  color: #fefefe;
+  color:#fefefe;
   font-family: 'OpenSans-Light';
   font-size: 1.1em;
   line-height: 24px;
@@ -134,14 +134,14 @@ header {
 }
 
 .content {
-  background: linear-gradient(to top, #33263a, #745082);
+  background-color:#745082;
   padding-bottom: 72px;
 }
 
 /*CONTENT*/
 
 .our_company {
-  color: white;
+  color:#fff;
   display: flex;
   font-family: 'league-gothic.regular';
   height: 270px;
@@ -181,7 +181,7 @@ header {
 }
 
 .our_company_one a {
-  color: #fff;
+  color:#fff;
   display: block;
   font-size: 1.1em;
   margin: 15px 0 0 217px;
@@ -189,7 +189,7 @@ header {
 }
 
 .our_company_two a {
-  color: #fff;
+  color:#fff;
   display: block;
   font-size: 1.1em;
   margin: 17px 0 0 225px;
@@ -197,7 +197,7 @@ header {
 }
 
 .our_company_three a {
-  color: #fff;
+  color:#fff;
   display: block;
   font-size: 1.1em;
   margin: 15px 0 0 228px;
@@ -206,7 +206,7 @@ header {
 
 .our_company a:hover {
   text-shadow: 0 0 30px #fff;
-} 
+}
 
 .our_company_one h3:before {
   background: url('../img/Layer 34.png') 0 0 no-repeat;
@@ -278,7 +278,7 @@ header {
 }
 
 .inform {
-  background: #fff;
+  background:#fff;
   font-family: 'OpenSans-Light';
   padding-bottom: 89px;
 }
@@ -288,7 +288,7 @@ header {
 }
 
 .inform_content h2 {
-  color: #454545;
+  color:#454545;
   display: inline-block;
   font-family: 'league-gothic.regular';
   font-size: 29px;
@@ -297,7 +297,7 @@ header {
 }
 
 .pingbuller {
-  background-image: url('../img/layer.png');
+  background-image: url('../img/layer.png') ;
   margin: 118px 0 0 0;
   width: 44%;
 }
@@ -308,7 +308,7 @@ header {
 }
 
 .pingbuller h3 {
-  color: #edbfff;
+  color:#edbfff;
   display: inline-block;
   font-family: 'league-gothic.regular';
   font-size: 29px;
@@ -324,7 +324,7 @@ header {
 }
 
 .head_pingbuller:before {
-  content: url('../img/face.png');
+  content: url('../img/face.png') ;
   margin-right: 14px;
 }
 
@@ -334,7 +334,7 @@ header {
 }
 
 .updates a {
-  color: #454545;
+  color:#454545;
   display: block;
   font-family: 'league-gothic.regular';
   font-size: 1.1em;
@@ -376,7 +376,7 @@ a.more_blog {
 }
 
 .labe {
-  background: #fff;
+  background:#fff;
   padding-bottom: 27px;
   border-top: 1px solid #f5efef;
 }
@@ -398,18 +398,18 @@ img.logos320 {
 }
 
 .news {
-  background: #ececec;
+  background:#ececec;
   padding-bottom: 89px;
 }
 
 .news_kategori {
-  color: #b9b9b9;
+  color:#b9b9b9;
   display: flex;
   font-weight: normal;
 }
 
 .news_kategori h2 {
-  color: #454545;
+  color:#454545;
   display: inline-block;
   font-family: 'league-gothic.regular';
   font-size: 3em;
@@ -418,7 +418,7 @@ img.logos320 {
 }
 
 .news_kategori h3 {
-  color: #454545;
+  color:#454545;
   font-family: 'league-gothic.regular';
   font-size: 1.8em;
   font-weight: normal;
@@ -453,7 +453,7 @@ img.logos320 {
 }
 
 .kategori_one h5 {
-  color: #d2d2d2;
+  color:#d2d2d2;
   font-style: italic;
   margin: 11px 0 13px 0;
 }
@@ -478,10 +478,10 @@ img.logos320 {
 /*FOOTER*/
 
 footer {
-  background: url('../img/footer.png');
+  background: url('../img/footer.png') ;
   background-repeat: no-repeat;
   background-size: cover;
-  color: #fff;
+  color:#fff;
   font-family: 'league-gothic.regular';
   font-weight: normal;
 }
