--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,21 @@
 @font-face {
   font-family: 'league-gothic.condensed-regular';
-  src: url('../fonts/league-gothic.condensed-regular.ttf');
+  src: url('../fonts/league-gothic.condensed-regular.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'league-gothic.regular';
-  src: url('../fonts/LeagueGothicRegular.woff');
+  src: url('../fonts/LeagueGothicRegular.woff') format('woff');
 }
 
 @font-face {
   font-family: 'OpenSans-Light';
-  src: url('../fonts/OpenSans-Light.ttf');
+  src: url('../fonts/OpenSans-Light.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'OpenSans-ExtraBold';
-  src: url('../fonts/OpenSans-ExtraBold.ttf');
+  src: url('../fonts/OpenSans-ExtraBold.ttf') format('truetype');
 }
 
 body {
@@ -30,7 +30,7 @@ body {
 }
 
 header {
-  background: url`('../img/bg.png') ;
+  background: url('../img/bg.png') ;
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -38,10 +38,13 @@ header {
 }
 
 .menu {
-  display: flex;
   font-family: 'league-gothic.regular';
   font-size: 1.5em;
   font-weight: normal;
+}
+
+.logo {
+  display: inline;
 }
 
 .logo img {
@@ -54,24 +57,25 @@ header {
 
 .nav_menu {
   color:#fff;
-  display: inline-block;
-  margin-left: 94px;
+  margin-left: 0;
 }
 
 .nav_menu li {
-  display: inline-block;
-  margin-left: 45px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0);
+  display: inline;
+  margin-left: 30px;
   list-style-type: none;
 }
 
-.nav_menu li:hover {
-  border-bottom: 1px solid #edbfff;
+.nav_menu a {
+  text-decoration: none;;
+}
+
+.nav_menu a:hover {
+  text-decoration: underline;
 }
 
 .nav_menu a {
   color:#edbfff;
-  text-decoration: none;
 }
 
 .nav_menu span {
@@ -90,7 +94,8 @@ header {
 }
 
 .banner {
-  background: rgba(0, 0, 0, .3);
+  background:#000;
+  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=40);
   font-family: 'league-gothic.regular';
   margin-top: 151px;
 }
