--- a/css/styleie8.css
+++ b/css/styleie8.css
@@ -1,23 +1,22 @@
 @font-face {
   font-family: 'league-gothic.condensed-regular';
-  src: url('../fonts/league-gothic.condensed-regular.ttf');
+  src: url('../fonts/league-gothic.condensed-regular.eot') ;
 }
 
 @font-face {
   font-family: 'league-gothic.regular';
-  src: url('../fonts/LeagueGothicRegular.woff');
+  src: url('../fonts/LeagueGothicRegular.eot') ;
 }
 
 @font-face {
   font-family: 'OpenSans-Light';
-  src: url('../fonts/OpenSans-Light.ttf');
+  src: url('../fonts/OpenSans-Light.eot') ;
 }
 
 @font-face {
   font-family: 'OpenSans-ExtraBold';
-  src: url('../fonts/OpenSans-ExtraBold.ttf');
+  src: url('../fonts/OpenSans-ExtraBold.eot') ;
 }
-
 
 body {
   font-family: 'OpenSans-Light';
@@ -39,7 +38,6 @@ header {
 }
 
 .menu {
-  display: flex;
   font-family: 'league-gothic.regular';
   font-size: 1.5em;
   font-weight: normal;
@@ -55,33 +53,16 @@ header {
 
 .nav_menu {
   color:#fff;
-  display: inline-block;
-  padding-left: 20px;
-  margin-left: 113px;
+  display: inline;
 }
 
 .nav_menu li {
-  display: inline-block;
-  margin-left: 45px;
+  display: inline;
+  margin-left: 12px;
   border-bottom: 1px solid rgba(0, 0, 0, 0);
   list-style-type: none;
 }
 
-.nav_menu a {
-  text-decoration: none;
-}
-
-.nav_menu a:hover {
-  text-decoration: underline;
-}
-
-.nav_menu a {
-  color:#edbfff;
-}
-
-.nav_menu span {
-  color:#fff;
-}
 
 .nav_menu_footer a {
   color:#fff;
@@ -95,7 +76,9 @@ header {
 }
 
 .banner {
-  background: rgba(0, 0, 0, .3);
+  background: black;
+  opacity: 0.7;
+  filter: alpha(Opacity=70) ; 
   font-family: 'league-gothic.regular';
   margin-top: 151px;
 }
@@ -138,7 +121,7 @@ header {
 }
 
 .content {
-  background: linear-gradient(to top, #33263a, #745082);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#33263a', endColorstr='#745082',GradientType=0 ); /* IE6-9 */
   padding-bottom: 72px;
 }
 
