--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,22 @@
 @font-face {
   font-family: 'league-gothic.condensed-regular';
-  src: url('../fonts/league-gothic.condensed-regular.ttf');
+  src: url('../fonts/league-gothic.condensed-regular.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'league-gothic.regular';
-  src: url('../fonts/LeagueGothicRegular.woff');
+  src: url('../fonts/LeagueGothicRegular.woff') format('woff');
 }
 
 @font-face {
   font-family: 'OpenSans-Light';
-  src: url('../fonts/OpenSans-Light.ttf');
+  src: url('../fonts/OpenSans-Light.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'OpenSans-ExtraBold';
-  src: url('../fonts/OpenSans-ExtraBold.ttf');
+  src: url('../fonts/OpenSans-ExtraBold.ttf') format('truetype');
 }
-
 
 body {
   font-family: 'OpenSans-Light';
@@ -213,7 +212,7 @@ header {
 }
 
 .our_company_one h3:before {
-  background: url('../img/Layer 34.png') 0 0 no-repeat;
+  background: url('../img/_ayer_34.png') 0 0 no-repeat ;
   content: "";
   display: inline-block;
   height: 2rem;
