--- a/css/styleie8.css
+++ b/css/styleie8.css
@@ -123,42 +123,27 @@ header {
 .content {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#33263a', endColorstr='#745082',GradientType=0 ); /* IE6-9 */
   padding-bottom: 72px;
+  height: 300px;
 }
 
 /*CONTENT*/
 
 .our_company {
   color: white;
-  display: flex;
+  display: inline;
   font-family: 'league-gothic.regular';
-  height: 270px;
 }
 
 .our_company_one p {
-  font-family: 'OpenSans-Light';
-  font-size: 1em;
-  height: 63%;
-  line-height: 24px;
-  margin: 4px 0 0 57px;
-  overflow: hidden;
+  height: 170px;
 }
 
 .our_company_two p {
-  font-family: 'OpenSans-Light';
-  font-size: 1em;
-  height: 64%;
-  line-height: 24px;
-  margin: 0 0 0 58px;
-  overflow: hidden;
+  height: 170px;
 }
 
 .our_company_three p {
-  font-family: 'OpenSans-Light';
-  font-size: 1em;
-  height: 64%;
-  line-height: 25px;
-  margin: 0 0 0 58px;
-  overflow: hidden;
+  height: 170px;
 }
 
 .our_company h3 {
@@ -196,7 +181,7 @@ header {
 }
 
 .our_company_one h3:before {
-  background: url('../img/Layer 34.png') 0 0 no-repeat;
+  background: url('../img/layer_34.png') 0 0 no-repeat;
   content: "";
   display: inline-block;
   height: 2rem;
@@ -208,7 +193,7 @@ header {
 }
 
 .our_company_two h3:before {
-  background: url('../img/Layer 34.png') -32px 0 no-repeat;
+  background: url('../img/layer_34.png') -32px 0 no-repeat ;
   content: "";
   display: inline-block;
   height: 2rem;
@@ -220,7 +205,7 @@ header {
 }
 
 .our_company_three h3:before {
-  background: url('../img/Layer 34.png') -65px 0 no-repeat;
+  background: url('../img/layer_34.png') -65px 0 no-repeat ;
   content: "";
   display: inline-block;
   height: 2rem;
@@ -261,250 +246,13 @@ header {
 .our_company_one,
 .our_company_two,
 .our_company_three {
-  width: 30%;
+  width: 28%;
+  float: left;
 }
 
 .inform {
   background:#fff;
   font-family: 'OpenSans-Light';
   padding-bottom: 89px;
-}
-
-.inform_content {
-  display: flex;
-}
-
-.inform_content h2 {
-  color: #454545;
-  display: inline-block;
-  font-family: 'league-gothic.regular';
-  font-size: 29px;
-  font-weight: normal;
-  margin: 0 5px 0 0;
-}
-
-.pingbuller {
-  background-image: url('../img/layer.png');
-  margin: 118px 0 0 0;
-  width: 44%;
-}
-
-.head_pingbuller {
-  align-items: center;
-  display: flex;
-}
-
-.pingbuller h3 {
-  color:#edbfff;
-  display: inline-block;
-  font-family: 'league-gothic.regular';
-  font-size: 29px;
-  font-weight: normal;
-  margin: 0 5px 0 0;
-}
-
-.pingbuller p {
-  height: 162px;
-  line-height: 23px;
-  margin: 0 0 0 70px;
-  overflow: hidden;
-}
-
-.head_pingbuller:before {
-  content: url('../img/face.png') ;
-  margin-right: 14px;
-}
-
-.updates {
-  margin: 129px 0 0 90px;
-  width: 46%;
-}
-
-.updates a {
-  color:#454545;
-  display: block;
-  font-family: 'league-gothic.regular';
-  font-size: 1.1em;
-  margin: 18px 0 0 345px;
-  text-decoration: none;
-}
-
-a.more_blog {
-  display: none;
-}
-
-
-.ikon1,
-.recent,
-.category,
-.ikon2,
-.blog,
-.ikon3 {
-  display: inline-block;
-  vertical-align: top;
-}
-
-.container {
-  margin-top: 14px;
-}
-
-.container h4 {
-  font-family: 'OpenSans-ExtraBold';
-  margin-top: 0;
-  margin-left: 12px;
-  margin-bottom: 7px;
-}
-
-.container p {
-  font-family: 'OpenSans-Light';
-  margin-top: 0;
-  margin-left: 12px;
-  margin-bottom: 0;
-}
-
-.labe {
-  background:#fff;
-  padding-bottom: 27px;
-  border-top: 1px solid #f5efef;
-}
-
-img.logos {
-  margin: 25px 0 0 95px;
-}
-
-img.logos768 {
-  display: none;
-}
-
-img.logos480 {
-  display: none;
-}
-
-img.logos320 {
-  display: none;
-}
-
-.news {
-  background:#ececec;
-  padding-bottom: 89px;
-}
-
-.news_kategori {
-  color:#b9b9b9;
-  display: flex;
-  font-weight: normal;
-}
-
-.news_kategori h2 {
-  color:#454545;
-  display: inline-block;
-  font-family: 'league-gothic.regular';
-  font-size: 3em;
-  font-weight: normal;
-  margin: 0;
-}
-
-.news_kategori h3 {
-  color:#454545;
-  font-family: 'league-gothic.regular';
-  font-size: 1.8em;
-  font-weight: normal;
-  margin: 0;
-}
-
-.kategori_one {
-  margin-top: 93px;
-  padding-right: 6%;
-  width: 30%;
-}
-
-.kategori_two{
-  margin-top: 95px;
-  padding-right: 6%;
-  width: 30%;
-}
-
-.kategori_three {
-  margin-top: 95px;
-  padding: 0;
-  width: 30%;
-}
-
-.kategori_one p {
-  font-family: 'OpenSans-Light';
-  font-size: 1em;
-  height: 120px;
-  line-height: 25px;
-  margin: 0;
-  overflow: hidden;
-}
-
-.kategori_one h5 {
-  color:#d2d2d2;
-  font-style: italic;
-  margin: 11px 0 13px 0;
-}
-
-.kategori_two p,
-.kategori_three p {
-  font-family: 'OpenSans-Light';
-  font-size: 1em;
-  height: 170px;
-  line-height: 25px;
-  margin-bottom: 0;
-  margin-top: 7px;
-  overflow: hidden;
-}
-
-.head_updates span {
-  display: inline-block;
-  font-family: 'league-gothic.regular';
-  font-size: 3em;
-}
-
-/*FOOTER*/
-
-footer {
-  background: url('../img/footer.png') ;
-  background-repeat: no-repeat;
-  background-size: cover;
-  color:#fff;
-  font-family: 'league-gothic.regular';
-  font-weight: normal;
-}
-
-.nav_menu_footer {
-  display: flex;
-  font-size: 1.2em;
-  padding: 0;
-}
-
-.nav_menu_footer ul {
-  margin: 0;
-  padding: 44px 0 0 0;
-  width: 81%;
-}
-
-.nav_menu_footer li {
-  display: inline-block;
-  list-style-type: none;
-  margin-right: 41px;
-}
-
-.designer_by {
-  align-items: center;
-  display: flex;
-  font-size: 12px;
-  justify-content: flex-end;
-  margin: 52px 0 48px 10px;
-  width: 18%;
-}
-
-.designer_by p {
-  font-family: 'OpenSans-Light';
-  margin: 0;
-}
-
-.designer_by span {
-  font-family: 'OpenSans-ExtraBold';
+  clear: both;
 }
