--- a/css/styleie8.css
+++ b/css/styleie8.css
@@ -4,241 +4,240 @@
 }
 
 @font-face {
-  font-family: 'league-gothic.regular';
-  src: url('../fonts/league-gothic.condensed-regular.eot') ;
+    font-family: 'league-gothic.regular';
+    src: url('../fonts/league-gothic.condensed-regular.eot') ;
 }
 
 @font-face {
-  font-family: 'OpenSans-Light';
-  src: url('../fonts/OpenSans-Light.eot') ;
+    font-family: 'OpenSans-Light';
+    src: url('../fonts/OpenSans-Light.eot') ;
 }
 
 @font-face {
-  font-family: 'OpenSans-ExtraBold';
-  src: url('../fonts/OpenSans-ExtraBold.eot') ;
+    font-family: 'OpenSans-ExtraBold';
+    src: url('../fonts/OpenSans-ExtraBold.eot') ;
 }
 
 body {
-  font-family: 'OpenSans-Light';
+    font-family: 'OpenSans-Light';
 }
 
 /*HEADER*/
 
 .menu {
-  font-family: 'league-gothic.regular';
-  font-size: 28px;
-  font-weight: normal;
+    font-family: 'league-gothic.regular';
+    font-size: 28px;
+    font-weight: normal;
 }
 
 .nav_menu {
-  color:#fff;
-  display: inline;
-  padding-left: 25px;
-  margin-left: 292px;
+    display: inline;
+    margin-left: 292px;
+    padding-left: 25px;
+    color:#fff;
 }
 
 .nav_menu li {
-  display: inline;
-  margin-left: 50px;
+    display: inline;
+    margin-left: 50px;
 }
 
 
 .nav_menu_footer a {
-  color:#fff;
-  text-decoration: none;
+    color:#fff;
+    text-decoration: none;
 }
 
 .banner_img {
-  left: 616px;
-  position: absolute;
-  top: -17px;
+    left: 616px;
+    position: absolute;
+    top: -17px;
 }
 
 .banner {
-  background: black;
-  filter: alpha(Opacity=50) ; 
-  font-family: 'league-gothic.regular';
-  margin-top: 151px;
+    margin-top: 151px;
+    background: #000;
+    font-family: 'league-gothic.regular';
+    filter: alpha(Opacity=50) ; 
 }
 
 .banner-inner {
-  position: relative;
+    position: relative;
 }
 
 .banner_content {
-  padding-bottom: 81px;
+    padding-bottom: 81px;
 }
 
 .banner_text p {
-  font-size: 18px;
+    font-size: 18px;
 }
 
 .banner_img {
-  top: -75px;
+    top: -75px;
 }
 
 .content {
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#33263a', endColorstr='#745082',GradientType=0 ); /* IE6-9 */
-  padding-bottom: 72px;
-  height: 300px;
+    height: 300px;
+    padding-bottom: 72px;
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#33263a', endColorstr='#745082',GradientType=0 ); /* IE6-9 */
 }
 
 /*CONTENT*/
 
 .our_company {
-  display: inline;
-  font-family: 'league-gothic.regular';
+    display: inline;
+    font-family: 'league-gothic.regular';
 }
 
 .our_company_one p {
-  height: 122px;
+    height: 122px;
 }
 
 .our_company_two p {
-  height: 122px;
+    height: 122px;
 }
 
 .our_company_three p {
-  height: 122px;
+    height: 122px;
 }
 
 .our_company h3 {
-  font-size: 36px;
+    font-size: 36px;
 }
 
 .our_company_one a {
-  font-size: 22px;
-  margin: 15px 0 0 240px;
+    font-size: 22px;
+    margin: 15px 0 0 240px;
 }
 
 .our_company_two a {
-  font-size: 22px;
-  margin: 17px 0 0 240px;
+    font-size: 22px;
+    margin: 17px 0 0 240px;
 }
 
 .our_company_three a {
-  font-size: 22px;
-  margin: 15px 0 0 240px;
+    font-size: 22px;
+    margin: 15px 0 0 240px;
 }
 
 .our_company a:hover {
-  height: 1em;
-  filter:Shadow(Color=#666666,Direction=135,Strength=5);
+    filter:Shadow(Color=#666,Direction=135,Strength=5);
 }
 
 .our_company_one h3:before {
-  content: url('../img/layer_34.png');
-  width: 30px;
-  height: 30px;
-  overflow: hidden;
-  margin-right: 27px;
+    width: 30px;
+    height: 30px;
+    margin-right: 27px;
+    content: url('../img/layer_34.png');
+    overflow: hidden;
 }
 
 .our_company_two h3:before {
-  content: url('../img/layer_34.png') -32px 0 no-repeat ;
-  width: 30px;
-  height: 30px;
-  overflow: hidden;
-  margin-right: 27px;
+    width: 30px;
+    height: 30px;
+    margin-right: 27px;
+    content: url('../img/layer_34.png') -32px 0 no-repeat ;
+    overflow: hidden;
 }
 
 .our_company_three h3:before {
-  content: url('../img/layer_34.png') -65px 0 no-repeat ;
-  width: 30px;
-  height: 30px;
-  overflow: hidden;
-  margin-right: 27px;
+    width: 30px;
+    height: 30px;
+    margin-right: 27px;
+    content: url('../img/layer_34.png') -65px 0 no-repeat ;
+    overflow: hidden;
 }
 
 .our_company_one h3:hover:before {
-  background-position: 0 -33px;
+    background-position: 0 -33px;
 }
 
 .our_company_two h3:hover:before {
-  background-position: -32px -33px;
+    background-position: -32px -33px;
 }
 
 .our_company_three h3:hover:before {
-  background-position: -65px -33px;
+    background-position: -65px -33px;
 }
 
 .our_company_one {
-  margin: 76px 0 0 0;
+    margin: 76px 0 0 0;
 }
 
 .our_company_two {
-  margin: 76px 0 0 40px;
+    margin: 76px 0 0 40px;
 }
 
 .our_company_three {
-  margin: 72px 0 0 40px;
+    margin: 72px 0 0 40px;
 }
 
 .our_company_one,
 .our_company_two,
 .our_company_three {
-  width: 30%;
-  float: left;
+    width: 30%;
+    float: left;
 }
 
 .inform {
-  clear: both;
-  padding-bottom: 500px
+    clear: both;
+    padding-bottom: 500px
 }
 
 .pingbuller {
-  float: left;
-  margin: 135px 0 0 0;
+    margin: 135px 0 0 0;
+    float: left;
 }
 
 .pingbuller p {
-  margin-top: 15px;
+    margin-top: 15px;
 }
 
-.head_pingbuller:before {
-  float: left;
+.head_pingbuller::before {
+    float: left;
 }
 
 .updates {
-  float: left;
+    float: left;
 }
 
 .updates a {
-  font-size: 22px;
-  margin: 22px 0 0 360px;
+    font-size: 22px;
+    margin: 22px 0 0 360px;
 }
 
 .labe {
-  clear: both;
+    clear: both;
 }
 
 .news {
-  padding-bottom: 430px;
+    padding-bottom: 430px;
 }
 
 .kategori_one,
 .kategori_two,
 .kategori_three {
-  width: 28%;
-  float: left;
+    width: 28%;
+    float: left;
 }
 
 /*FOOTER*/
 
 footer {
-  clear: both;
+    clear: both;
 }
 
 .nav_menu_footer {
-  font-size: 22px;
-  padding-bottom: 20px;
+    padding-bottom: 20px;
+    font-size: 22px;
 }
 
 .designer_by {
-  display: inline;
-  margin-left: 800px;
+    display: inline;
+    margin-left: 800px;
 }
 
 .designer_by p {
-  display: inline;
+    display: inline;
 }
